--- a/HTML/Module-3/css/footer.css
+++ b/HTML/Module-3/css/footer.css
@@ -1,10 +1,10 @@
-.footer {}
+.footer {
+  text-align: center;
+
+}
 
 .button {
   display: inline-block;
   padding: 16px 35px;
   font-size: 20px;
-  margin-top: 54px;
-  margin-bottom: 67px;
-  margin-left: 505px;
 }
