--- a/HTML/Module-3/css/header.css
+++ b/HTML/Module-3/css/header.css
@@ -3,10 +3,9 @@
 }
 
 .menu {
-  margin-left: 312px;
   list-style: none;
   font-size: 14px;
-
+  text-align: center;
 }
 
 .menu-item {
@@ -23,4 +22,4 @@
   text-transform: uppercase;
   text-decoration: none;
   color: #333;
-  }
+}
