--- a/HTML/Module-3/css/main.css
+++ b/HTML/Module-3/css/main.css
@@ -1,10 +1,11 @@
 .content {
-  margin-left: 150px;
-  filter: grayscale(100%);
+  font-size: 0;
+  margin-bottom: 54px;
 }
 
 .article {
   display: inline-block;
+  font-size: 16px;
   width: 420px;
   margin-right: 58px;
   margin-bottom: 128px;
@@ -19,6 +20,7 @@
 }
 
 .article-img {
+  filter: grayscale(100%);
   width: 420px;
   height: 280px;
   margin-bottom: 26px;
@@ -32,4 +34,4 @@
 
 .figcaption {
   font-size: 14px;
-  }
+}
