--- a/HTML/Module-4/css/header.css
+++ b/HTML/Module-4/css/header.css
@@ -7,20 +7,20 @@
   float: left;
   text-transform: uppercase;
   font-size: 32px;
-  margin-right: 562px;
   font-weight: 20;
   color: #515151;
 }
 
+
 .menu {
   list-style: none;
-  float: left;
+  float: right;
 }
 
 .menu-item {
   display: inline-block;
   margin-right: 31px;
-    }
+}
 
 .menu-link {
   text-decoration: none;
@@ -28,7 +28,10 @@
   color: black;
   font-size: 12px;
   font-weight: 700;
-  
+}
+
+.menu-link:hover {
+  color: #1abc9c;
 }
 
 .menu-item:last-child {
