--- a/HTML/Module-5/css/header.css
+++ b/HTML/Module-5/css/header.css
@@ -1,12 +1,21 @@
+.wrapper-header {
+  background-color: #fff;
+  padding-top: 35px;
+  padding-bottom: 32px;
+}
+
+.container {
+  margin: auto;
+  width: 1110px;
+}
+
 .header {
-  margin-bottom: 32px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .title {
   float: left;
-  margin-left: 245px;
-  text-transform: uppercase;
+    text-transform: uppercase;
   font-size: 30px;
   color: #515151;
 }
@@ -35,7 +44,7 @@
 }
 
 .menu-item:last-child {
-  margin-right: 243px;
+  margin-right: 0;
 }
 
 .clearfix::after {
