--- a/HTML/Module-5/css/main.css
+++ b/HTML/Module-5/css/main.css
@@ -2,6 +2,8 @@
   position: relative;
   background-image: url(../img/parizh.png);
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   padding-top: 214px;
   padding-bottom: 278px;
 
@@ -34,7 +36,7 @@
   padding: 30px 40px 35px;
 }
 
-.main-title:hover::before {
+.main-title:hover:before {
   background-color: #1abc9c;
 }
 
@@ -53,7 +55,7 @@
 
 }
 
-.main-title:hover::after {
+.main-title:hover:after {
   background-color: #1abc9c;
 }
 
@@ -102,7 +104,7 @@
   display: block;
   width: 164px;
   height: 7px;
-  background-color: #1abc9c;
+  background-color: #64dac2;
   margin: 30px auto 0;
 }
 
