--- a/HTML/practics/css/styles.css
+++ b/HTML/practics/css/styles.css
@@ -12,27 +12,27 @@
 }
 
 .page-header {
-
-  border-radius: 5px;
-  /* box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.4); */
-  min-height: 300px;
-  /* margin-top: 10px; */
-  padding-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 20px;
+  
+  
+  padding: 20px;
   background: linear-gradient(to right, red, green);
-  background: url(../logo/nature.jpg) no-repeat scroll top;
-  background-size: cover;
-  background-attachment: fixed;
-  margin-bottom: 30px;
+  
+  
 }
 
 .logo {
   display: inline-block;
+
   height: 50px;
   width: 100px;
-  vertical-align: middle;
+
   background-image: url(../logo/barselona.png);
   background-size: cover;
-  margin-right: 500px;
+
 }
 
 .logo:hover {
@@ -41,14 +41,14 @@
 }
 
 .menu {
-  display: inline-block;
+  display: flex;
+  
   list-style: none;
-  font-size: 0;
 
 }
 
 .menu-item {
-  display: inline-block;
+
   margin-right: 20px;
   font-size: 16px;
 }
@@ -69,10 +69,30 @@
   padding: 10px;
 }
 
-.clearfix::after {
-  display: block;
-  clear: both;
-  content: '';
+.promo {
+  padding: 100px 0;
+  background-image: url(../logo/nature.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  
+}
+
+.promo-article {
+  width: 600px;
+  margin: auto;
+}
+
+.promo-title {
+  text-transform: uppercase;
+  color: var(--accent-color);
+  margin-bottom: 16px;
+}
+
+.promo-text {
+  color: #fff;
+  margin-bottom: 16px;
+
 }
 
 .line-second {
@@ -84,7 +104,7 @@
 
 .section {
   background-color: #3498DB;
-  padding-top: 40px;
+  
   padding-bottom: 40px;
 
 
@@ -96,20 +116,24 @@
   text-transform: uppercase;
 }
 
-.section-body {}
+.section-body {
+  display: flex;
+  justify-content: space-between;
+}
 
 .body-article {
+padding-top: 40px;
   background-color: green;
   color: white;
 }
 
 .article {
-  float: left;
-  width: 348px;
-  margin-right: 33px;
-  font-size: 0;
 
-  
+  flex-basis: 32%;
+
+
+
+
 }
 
 .article:last-child {
@@ -117,7 +141,7 @@
 }
 
 .article-img {
-  width: 348px;
+  width: 100%;
   height: 260px;
   margin-bottom: 12px;
 }
@@ -150,30 +174,37 @@
   padding: 18px 41px;
   font-size: 16px;
   transition: all 0.5s ease-out;
+  border: none;
 }
 
 .button:hover {
   padding-left: 30px;
   padding-right: 30px;
-  background-color: #00008B;
+  background-color: var(--accent-color);
   text-shadow: 0 0 5px white;
   transition: all 0.5s ease-out;
 }
 
 .body-figure {
   position: relative;
-  display: inline-block;
   margin-bottom: 102px;
-  width: 100%;
-  /* background-color: red; */
+
+}
+
+.all-figure {
+  display: flex;
+  
+
+
 }
 
 .figure {
-  display: inline-block;
+  display: flex;
   position: relative;
-  padding: 10px;
-  margin-bottom: 27px;
-  width: 33%;
+
+  
+  
+  flex-wrap: wrap;
 }
 
 .figure:hover .figure-socials {
@@ -181,23 +212,25 @@
 }
 
 .figure-socials {
-  position: absolute;
   display: none;
-  text-align: center;
+  position: absolute;
+
+  opacity: 0.5;
   background-color: yellow;
-  width: 230px;
-  height: 200px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-    
+
+
+
 }
 
 .icon {
+
   display: inline-block;
+
   height: 50px;
   width: 50px;
   background-color: #fff;
+  background-size: 20%;
+  background-size: cover;
 }
 
 .icon-facebook {
@@ -215,31 +248,27 @@
   background-size: cover;
 }
 
-.figure:nth-child(n+3) {
-  margin-right: 0;
-}
-
-.figure:nth-last-child(-n+3) {
-  margin-bottom: 0;
-}
 
 
 .gallery-img {
-  float: left;
-  width: 100%;
+ 
+
+
   height: 280px;
 }
 
 
 .text {
-  width: 255px;
-  font-size: 0;
+  
+  display: flex;
+
+
 }
 
 
 .worlds {
-  float: left;
-  width: 201px;
+  flex-basis: 78%;
+
   background-color: #323232;
   color: white;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -250,8 +279,8 @@
 
 
 .price {
-  float: left;
-  width: 54px;
+  flex-basis: 22%;
+
   background-color: #8c8c8c;
   color: white;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -261,7 +290,9 @@
 }
 
 .gallery-button {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #fefefe;
   border: 1px solid #fefefe;
   text-decoration: none;
@@ -269,4 +300,42 @@
   padding: 10px 20px;
   text-align: center;
   margin-top: 20px;
+}
+
+.page-footer {
+  padding: 80px 0;
+}
+
+.footer-socials {
+  display: flex;
+}
+
+.footer-icon {
+  display: block;
+  height: 64px;
+  width: 64px;
+  
+}
+
+.bg-001_facebook {
+  
+  background: url('../icon/css_sprites.png') -10px -10px;
+}
+
+
+.bg-004_twitter_social_outlined_logo {
+  
+  background: url('../icon/css_sprites.png') -94px -10px;
+}
+
+
+.bg-005_linkedin_social_outline_logotype {
+ 
+  background: url('../icon/css_sprites.png') -10px -94px;
+}
+
+
+.bg-006_google_plus {
+  
+  background: url('../icon/css_sprites.png') -94px -94px;
 }
