--- a/HTML/Module-6/css/header.css
+++ b/HTML/Module-6/css/header.css
@@ -9,22 +9,17 @@
     font-size: 1.8rem;
     font-family: 'montserrat', sans-serif;
     color: #95e1d3;
-
+    font-weight: bold;
 }
 
 .menu {
     display: flex;
     list-style: none;
     align-items: center;
+    flex-basis: 40%;
+    justify-content: space-between;
 }
 
-.menu-item {
-    margin-right: 3.25rem;
-}
-
-.menu-item:last-child {
-    margin-right: 0;
-}
 
 .menu-link {
     text-decoration: none;
