--- a/HTML/practics/css/styles.css
+++ b/HTML/practics/css/styles.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  /* height: 2000px; */
+
 }
 
 img {
@@ -12,6 +12,7 @@ img {
 }
 
 .wrapper {
+
   background: linear-gradient(to right, red, green);
 
 }
@@ -24,18 +25,14 @@ img {
 }
 
 .container {
-  width: 1110px;
+  max-width: 70rem;
+  min-width: 20rem;
   margin: auto;
+  width: 100%;
 }
 
 .page-header {
-  
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   border-radius: 20px;
-
-
   padding: 20px;
   background: linear-gradient(to right, red, green);
 
@@ -43,7 +40,7 @@ img {
 }
 
 .logo {
-  display: inline-block;
+  display: none;
 
   height: 50px;
   width: 100px;
@@ -53,32 +50,59 @@ img {
 
 }
 
+@media (min-width: 768px) {
+  .page-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+  }
+
+  .menu {
+    display: flex;
+    justify-content: space-between;
+    
+    
+  }
+
+  .logo {
+    display: block;
+
+  }
+}
+
 .logo:hover {
   transform: rotate(360deg);
   transition: all 5s ease-out;
 }
 
 .menu {
-  display: flex;
-
   list-style: none;
+  justify-content: space-between;
 
+}
+
+@media (min-width: 480px) {
+  .menu {
+    display: flex;
+    flex-basis: 30%;
+  }
 }
 
 .menu-item {
 
-  margin-right: 20px;
+
   font-size: 16px;
 }
 
-.menu-item:last-child {
-  margin-right: 0;
-}
+
 
 .menu-link {
+  display: block;
   text-decoration: none;
   text-transform: uppercase;
   color: yellow;
+  text-align: center;
 }
 
 .menu-link:hover {
@@ -89,7 +113,7 @@ img {
 
 .promo {
   padding: 100px 0;
-  
+
 
 }
 
@@ -122,13 +146,12 @@ img {
 .section-title {
   font-size: 30px;
   margin-bottom: 20px;
-  
+
   text-transform: uppercase;
 }
 
 .section-body {
-  display: flex;
-  justify-content: space-between;
+
   padding-bottom: 2rem;
 }
 
@@ -138,18 +161,9 @@ img {
   color: white;
 }
 
-.article {
-
-  flex-basis: 32%;
+.article {}
 
 
-
-
-}
-
-.article:last-child {
-  margin-right: 0;
-}
 
 .article-img {
   width: 100%;
@@ -212,12 +226,12 @@ img {
   box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.3);
 }
 
-.feedback-form-input, .feedback-form-textarea {
-display: block;
-width: 100%;
-font-size: 1.125rem;
-padding: 0.5rem 0.25rem;
-margin-bottom: 1rem;
-resize: none;
+.feedback-form-input,
+.feedback-form-textarea {
+  display: block;
+  width: 100%;
+  font-size: 1.125rem;
+  padding: 0.5rem 0.25rem;
+  margin-bottom: 1rem;
+  resize: none;
 }
-
