--- a/HTML/Module-8/css/footer.css
+++ b/HTML/Module-8/css/footer.css
@@ -8,6 +8,7 @@
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
     color: #ff4e50;
+    background-color: #fff;
     border: 2px solid #ff4e50;
     border-radius: 20px;
     padding: 0.625rem 4.375rem;
