--- a/HTML/Module-8/css/base.css
+++ b/HTML/Module-8/css/base.css
@@ -6,6 +6,7 @@
 
 .wrapper-header {
     padding-top: 1.875rem;
+    padding-bottom: 8.625rem;
     background-color: #1a1915;
     background-image: url(../img/Vector\ Smart\ Object.png);
     background-position: center;
