--- a/HTML/Module-8/css/tablet.css
+++ b/HTML/Module-8/css/tablet.css
@@ -1,12 +1,18 @@
-@media (min-width: 670px) {
+@media (min-width: 768px) {
+    .wrapper-header {
+        padding-bottom: 14rem;
+    }
+    
     .header {
         display: flex;
         flex-direction: row-reverse;
         justify-content: space-around;
+        margin-bottom: 9.5rem;
     }
 
     .menu {
         flex-basis: 20%;
+        margin-bottom: 0;
     }
 
     .promo-title {
@@ -15,6 +21,7 @@
 
     .promo-text {
         font-size: 1.375rem;
+        margin-bottom: 2.2rem;
     }
 
     .main {
@@ -24,7 +31,8 @@
     .gallery {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: space-evenly;
+        margin-bottom: 2.25rem;
     }
 
     .gallery-element {
