--- a/HTML/Module-8/css/main.css
+++ b/HTML/Module-8/css/main.css
@@ -8,10 +8,10 @@
 }
 
 .gallery-element {
-    position: relative;
+    
 
 
-    text-align: center;
+    
     margin-bottom: 1.75rem;
 }
 
@@ -28,10 +28,19 @@
     margin-bottom: 0.875rem;
 }
 
-.img {
-    display: block;
+.img-box {
+    
+    position: relative;
+    height: 121px;
+    width: 121px;
     margin: auto;
     margin-bottom: 1rem;
+}
+
+.img {
+    display: block;
+   
+    
 }
 
 .titles {
@@ -40,6 +49,7 @@
     font-family: "Montserrat", sans-serif;
     font-weight: 800;
     margin-bottom: 0.875rem;
+    text-align: center;
 }
 
 .text {
@@ -47,14 +57,15 @@
     font-size: 0.875rem;
     font-family: "Roboto", sans-serif;
     font-weight: 200;
+    text-align: center;
 }
 
 .border {
     display: flex;
     position: absolute;
-    top: 31%;
-    left: 57%;
-    transform: translate(20%, 20%);
+    top: 20%;
+    left: 20%;
+    transform: translate(150%, 138%);
     justify-content: center;
     align-items: center;
     border: 4px solid #fff;
