--- a/HTML/Module-10/css/bases.css
+++ b/HTML/Module-10/css/bases.css
@@ -8,24 +8,11 @@
     position: relative;
     padding-top: 1.5rem;
     padding-bottom: 14.25rem;
-    background: linear-gradient(to bottom, #f08a8a, #f1d586);
-    
-
-}
-
-.wrapper-header::after {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: block;
-    content: '';
-    background-image: url(../img/Layer\ 15.jpg);
+    background-image: linear-gradient(180deg, rgba(244,140,131,1) 0%, rgba(251,226,138,0.8) 100%), url(../img/Layer\ 15.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.1;
+    
 }
 
 .wrapper-main {
@@ -40,6 +27,7 @@
 }
 
 .container {
-    width: 75rem;
+    max-width: 75rem;
+    min-width: 20rem;
     margin: auto;
 }
