--- a/HTML/Module-10/css/footer.css
+++ b/HTML/Module-10/css/footer.css
@@ -5,7 +5,7 @@
 
 }
 
-.footer-title {
+.footer__title {
     font-size: 0.8rem;
     font-family: 'Montserrat', sans-serif;
     color: #333;
@@ -16,18 +16,18 @@
     color: #f6a1a1;
 }
 
-.form {
+.footer__form {
     display: flex;
 }
 
-.input {
+.form__input {
     font-family: 'roboto', sans-serif;
     font-size: 0.937rem;
     padding: 0.75rem 8.875rem 0.75rem 0.75rem;
     border: 1px solid #e7e7e7;
 }
 
-.button {
+.form__button {
     background-color: #95e1d3;
     color: #fff;
     border: none;
