--- a/HTML/Module-11/css/styles.css
+++ b/HTML/Module-11/css/styles.css
@@ -8,7 +8,11 @@
   position: relative;
   padding-top: 1.5rem;
   padding-bottom: 14.25rem;
-  background-color: rgba(255, 0, 0, 0.3);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(244,140,131,0.9)), to(rgba(251,226,138,0.9))), url(../img/Layer\ 15.jpg);
+  background-image: -webkit-linear-gradient(top, rgba(244,140,131,0.9) 0%, rgba(251,226,138,0.9) 100%), url(../img/Layer\ 15.jpg);
+  background-image: -o-linear-gradient(top, rgba(244,140,131,0.9) 0%, rgba(251,226,138,0.9) 100%), url(../img/Layer\ 15.jpg);
+  background-image: linear-gradient(180deg, rgba(244,140,131,0.9) 0%, rgba(251,226,138,0.9) 100%), url(../img/Layer\ 15.jpg);
+  
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center; }
