--- a/HTML/Module-11/sass/_bases.scss
+++ b/HTML/Module-11/sass/_bases.scss
@@ -14,8 +14,7 @@
     position: relative;
     padding-top: 1.5rem;
     padding-bottom: 14.25rem;
-    background-color: rgba(255, 0, 0, 0.3);
-    // background-image: linear-gradient(180deg, rgba(244,140,131,0.9) 0%, rgba(251,226,138,0.9) 100%), url(../img/Layer\ 15.jpg);
+        background-image: linear-gradient(180deg, rgba(244,140,131,0.9) 0%, rgba(251,226,138,0.9) 100%), url(../img/Layer\ 15.jpg);
     @include style;
 }
 
