--- a/HTML/Module-10/css/header.css
+++ b/HTML/Module-10/css/header.css
@@ -34,8 +34,9 @@
 }
 
 .menu__link::after {
-    display: none;
+    display: block;
     content: '';
+    color: transparent;
     width: 100%;
     height: 0.2rem;
     margin-top: 0.6rem;
@@ -43,13 +44,13 @@
 }
 
 .menu__link:hover:after {
-    display: block;
+    
     background-color: #fce38a;
 }
 
 .menu__link:hover {
     color: #fce38a;
-    fill: #fce38a;
+    fill: #f5f1e5;
 }
 
 .menu__svg {
